--- a/contact.html
+++ b/contact.html
@@ -57,8 +57,8 @@
                     <img src="images/desktop-icon.png" alt="desktop-icon">
 
                     <div id="email">
-                        raymondogb@gmail.com <br>
-                        i.r.ogbuehi@gmail.com
+                            <a href="mailto:raymondogb@gmail.com">raymondogb@gmail.com</a><br>
+                        <a href='mailto:i.r.ogbuehi@gmail.com>i.r.ogbuehi@gmail.com</a>
                     </div>
                 </div>
 
@@ -66,8 +66,7 @@
                     <img src="images/phone-icon.png" alt="phone-icon" width="130">
 
                     <div id="numbers">
-                        09130682030 <br>
-                        08123435100
+                        <a href="tel:+2349130682030">09130682030</a> <br>
                     </div>
                 </div>
             </div>
