--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
 
                     <div id="email">
                             <a href="mailto:raymondogb@gmail.com">raymondogb@gmail.com</a><br>
-                        <a href='mailto:i.r.ogbuehi@gmail.com>i.r.ogbuehi@gmail.com</a>
+                        <a href='mailto:i.r.ogbuehi@gmail.com'>i.r.ogbuehi@gmail.com</a>
                     </div>
                 </div>
 
