--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,7 @@
 
                     <div id="numbers">
                         <a href="tel:+2349130682030">09130682030</a> <br>
+                        <a href="tel:+2348038042920">08038042920</a>
                     </div>
                 </div>
             </div>
