--- a/contact.html
+++ b/contact.html
@@ -57,8 +57,8 @@
                     <img src="images/desktop-icon.png" alt="desktop-icon">
 
                     <div id="email">
-                            <a href="mailto:raymondogb@gmail.com">raymondogb@gmail.com</a><br>
-                        <a href='mailto:i.r.ogbuehi@gmail.com'>i.r.ogbuehi@gmail.com</a>
+                        <a href="mailto:raymondogb@gmail.com">raymondogb@gmail.com</a>
+                        <a href="mailto:i.r.ogbuehi@gmail.com">i.r.ogbuehi@gmail.com</a>
                     </div>
                 </div>
 
@@ -66,7 +66,7 @@
                     <img src="images/phone-icon.png" alt="phone-icon" width="130">
 
                     <div id="numbers">
-                        <a href="tel:+2349130682030">09130682030</a> <br>
+                        <a href="tel:+2349130682030">09130682030</a>
                         <a href="tel:+2348038042920">08038042920</a>
                     </div>
                 </div>
