--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,8 @@
 
             <div class="contact-info">
                 <div>
-                    <img src="images/desktop-icon.png" alt="desktop-icon">
+                    <i class="fas fa-desktop contact-icon"></i>
+
 
                     <div id="email">
                         <a href="mailto:raymondogb@gmail.com">raymondogb@gmail.com</a>
@@ -63,7 +64,7 @@
                 </div>
 
                 <div>
-                    <img src="images/phone-icon.png" alt="phone-icon" width="130">
+                    <i class="fas fa-phone contact-icon"></i>
 
                     <div id="numbers">
                         <a href="tel:+2349130682030">09130682030</a>
