--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,8 @@
 
             <div class="contact-info">
                 <div>
-                    <i class="fas fa-desktop contact-icon"></i>
+                    <img src="images/desktop-icon.png" alt="desktop-icon">
+
 
 
                     <div id="email">
@@ -64,7 +65,7 @@
                 </div>
 
                 <div>
-                    <i class="fas fa-phone contact-icon"></i>
+                    <img src="images/phone-icon.png" alt="phone-icon" width="130">
 
                     <div id="numbers">
                         <a href="tel:+2349130682030">09130682030</a>
