--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,7 @@
                 <div class="container">
                     <div class="education">
                         <h3>Lorem.</h3>
-                        <h4>Christhill College</h4>
+                        <h4>Lorem Ipsum</h4>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi soluta repellat facilis dolores nihil culpa minima, natus perspiciatis officiis eveniet quaerat, sunt dolorem ad ut rem fugit libero quia consequuntur.
                         </p>
@@ -58,7 +58,7 @@
     
                     <div class="education">
                         <h3>Lorem.</h3>
-                        <h4>Christhill College</h4>
+                        <h4>Lorem Ipusm</h4>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi soluta repellat facilis dolores nihil culpa minima, natus perspiciatis officiis eveniet quaerat, sunt dolorem ad ut rem fugit libero quia consequuntur.
                         </p>
@@ -66,7 +66,7 @@
     
                     <div class="education">
                         <h3>Lorem.</h3>
-                        <h4>Christhill College</h4>
+                        <h4>Lorem Ipsum</h4>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi soluta repellat facilis dolores nihil culpa minima, natus perspiciatis officiis eveniet quaerat, sunt dolorem ad ut rem fugit libero quia consequuntur.
                         </p>
