--- a/resume.html
+++ b/resume.html
@@ -80,7 +80,7 @@
                 <div class="container">
                     <div class="experience">
                         <h3>Lorem.</h3>
-                        <h4>Web Design</h4>
+                        <h4>Lorem Ipsum</h4>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi soluta repellat facilis dolores nihil culpa minima, natus perspiciatis officiis eveniet quaerat, sunt dolorem ad ut rem fugit libero quia consequuntur.
                         </p>
